Version Next

    - SpringContextApplication: add "vaadinContextConfigLocation" init param

Version 1.0.420 Released June 9, 2012

    - Added Vaadin 7 versions of Vaadin classes that require change
    - Changed IdGenerator to re-use the same instance on re-entrant invocation;
      NOTE: backward-incompatible change.
    - Added new Container classes, PropertyExtractor, and sorting to PropertyDef
    - Added VaadinApplicationListener.addAsListenerTo()
    - Added AtomicUpdateFileOutputStream and {,File}StreamRepository
    - Added AbstractDAO.contains()
    - Added PropertyDef.cast()
    - Added ThreadLocalHolder

Version 1.0.349 Released April 27, 2012

    - Fixed issue with circular autowiring dependencies that include the
      SpringContextApplication bean; this also eliminates the requirement
      to create custom static get() method in subclass (issue #7)
    - Removed deprecated ContextApplicationFactoryBean
    - Added @PostCompletionSupport Spring annotation
    - Added SpringXSLPersistentObjectSchemaUpdate.setTransformerFactory()
    - Added support for "empty stops" in PersistentObject
    - Fix possible ClassCastException in JiBXUtil.readObject()
    - Fix bug in PersistentObject when numBackups == 1
    - Added some enhancements to PropertyDef
    - Added AbstractConfiguredBean

Version 1.0.315 Released March 26, 2012

    - Added CSVWriter
    - Added ContextApplication.invokeLater()
    - Catch all Exceptions in SpringDelegate to support "empty open"
    - Added to IdGenerator methods setId(), getObject(), and run(Callable)
    - Execute all JiBXUtil methods within an invocation of IdGenerator.run()
    - Added ParseUtil.(de)serializeReference() and ParseUtil.deserializeUUID()
    - Have IdMappingMarshaller implement Unmarshaller as well as Marshaller
    - Added JiBXUtil method variants that take a binding name parameter
    - Fixed access permission bug in PersistentObject constructor
    - Added Pattern validation constraint
